# Block-Ops-Static-IP-Map-Tool

./: Cargo.toml  README.md  README_RACK_MAP_MONITOR_V1.md  README_V2.md  build.rs  build_release.bat
docs/: set_network_conf.cgi
src/: blockops_splash.rs  main.rs
