[package]
name = "blockops_static_ip_tool"
version = "1.7.5"
edition = "2021"

[dependencies]
base64 = "0.22"
md5 = "0.7"
eframe = { version = "0.27", features = ["default"] }
egui = "0.27"
egui_extras = { version = "0.27", features = ["image"] }
image = { version = "0.24", features = ["gif", "png"] }
csv = "1.3"
serde_json = "1.0"
ureq = { version = "2.9", features = ["json"] }
rfd = "0.14"
regex = "1.10"
chrono = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true


[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
winresource = "0.1"
